[gd_scene load_steps=4 format=2]

[ext_resource path="res://Traps/pressure_plate.gd" type="Script" id=1]
[ext_resource path="res://Assets/otros/placa presion.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[node name="pressure_plate" type="Area2D"]
z_index = -1
collision_layer = 8
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1, 1.00822 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="Sprite" parent="."]
position = Vector2( 4.76837e-07, 4.76837e-07 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 2 )
hframes = 3
frame = 1

[connection signal="body_entered" from="." to="." method="_on_pressure_plate_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_pressure_plate_body_exited"]
